# teleaws

./: README.md  pyproject.toml
src/teleaws/aws/: dynamodb.py  models.py  ssm.py  translate.py
src/teleaws/config/: config.py
src/teleaws/tg/: bot.py  models.py
