[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teleaws"
version = "0.0.1"
authors = [
  { name="Viacheslav Kozachok", email="uberbug544@gmail.com" },
]
description = "Module that provides handy way of managing AWS and telegram bot tied togather"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests==2.28.2",
    "boto3==1.26.79",
    "aiohttp==3.8.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.2.2"
]
# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"